--- a/desafio-02/css/style.css
+++ b/desafio-02/css/style.css
@@ -12,19 +12,62 @@ body, input, textarea, button {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+button {
+  cursor: pointer;
+}
+
 .row {
   margin: 0;
 }
 
-button {
-  cursor: pointer;
+header.container {
+  padding: 0;
 }
 
 /* ---------------------------------------------------
     MEDIA QUERIES
 ----------------------------------------------------- */
 
+@media (max-width: 1200px)
+{
+  #navbar-links .navbar-nav > a {
+    margin-right: 5rem;
+  }
+}
 
+@media (max-width: 1000px)
+{
+  .navbar .navbar-brand {
+    padding: 20px;
+    margin-right: 1rem;
+  }
+  #navbar-links .navbar-nav > a {
+    margin-right: 4rem;
+    font-size: 90%;
+  }
+  #navbar-links .navbar-nav a:last-child {
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 880px)
+{
+  #navbar-links .navbar-nav > a {
+    font-size: 85%;
+    margin-right: 1rem;
+  }
+}
+
+@media (max-width: 767px)
+{
+  .navbar {
+    display: flex;
+    justify-content: center;
+  }
+  .title-container {
+    display: none;
+  }
+}
 
 /* ---------------------------------------------------
     NAVBAR
